Inclusao arquivos e ajuste animaçoes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -14,13 +13,16 @@
   <link rel="stylesheet" href="css/updates.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700|Open+Sans:400,400i,600,600i,700,700i"
     rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
   <!-- Favicon
 	============================================= -->
-  <link rel="shortcut icon" href="images/general-elements/favicon/favicon.png" />
-  <link rel="apple-touch-icon" href="images/general-elements/favicon/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="images/general-elements/favicon/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="images/general-elements/favicon/apple-touch-icon-114x114.png" />
+  <link rel="shortcut icon" href="images/logo.png" />
+  <link rel="apple-touch-icon" href="images/logo.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="images/logo.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="images/logo.png" />
 
   <!-- Title
 	============================================= -->
@@ -151,8 +153,8 @@
           <div class="section-content">
             <div class="container">
               <div class="row">
-                <div class="col-md-3 col-sm-6 text-center hidden-xs">
-                  <img src="images/files/dr1.png" alt="dr1" />
+                <div class="col-md-3 col-sm-6 text-center hidden-xs align-self-bottom">
+                  <img src="images/files/dr1.png" alt="dr1"/>
                 </div>
                 <div class="
                       col-md-3 col-sm-6 col-md-push-6
@@ -276,21 +278,21 @@
               <div class="container">
                 <div class="row">
                   <div class="section-content">
-                    <div class="section-title text-white mt-5 text-center">
+                    <div id="teste1" class="section-title text-white mt-5 text-center">
                       <h2>Planos de Saúde</h2>
                       <p>
                         Conheça aqui todas as opções em planos de saúde familiar e empresarial, e fala sua cotação
                         gratuitamente.
                       </p>
                     </div>
-                    <div class="img-planosSaude">
+                    <div id="slideShow" class="img-planosSaude">
                       <img src="/images/amil.png" alt="amil" style="width: 200px; height: 150px;">
                       <img src="/images/sulAmerica.png" alt="sulAmerica">
                       <img src="/images/bradesco.png" alt="bradesco">
                       <img src="/images/unimed.png" alt="unimed">
                       <img src="/images/hospitalar.png" alt="hospitalar">
                     </div>
-                    <div class="img-planosSaude1">
+                    <div id="slideShow" class="img-planosSaude1">
                       <img src="/images/notredame.png" alt="notredame">
                       <img src="/images/humanaSaude.png" alt="humanaSaude">
                       <img src="/images/santaRitaSaude.png" alt="santaRitaSaude">
@@ -448,7 +450,7 @@
         </div>
         <!-- #full-container end -->
 
-        <a class="scroll-top" href="#"><img src="images/general-elements/scroll-top.png" alt="" /></a>
+        <a class="scroll-top" href="#"><img src="images/WhatsApp.png" alt="WhatsApp" /></a>
 
         <!-- External JavaScripts
 	============================================= -->
@@ -471,154 +473,3 @@
 </body>
 
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-
-    <style>
-      header {
-        height: 60px;
-      }
-      .principal {
-        height: 650px;
-        background-image: url("/images/Background1.jpeg");
-        background-size: cover;
-      }
-      .menu {
-        flex-grow: 10;
-        align-items: center;
-      }
-      .menu li {
-        display: inline-block;
-        text-decoration: none;
-        margin: 0px 25px;
-      }
-      .inferior {
-        height: 150px;
-        background-color: azure;
-      }
-      .inferior img{
-        height: 75px;
-        width: 150px;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        
-      }
-      .meio {
-        height: 640px;
-        display: flex;
-        justify-content: start;
-      }
-      .meio form {
-        padding: 0px 50px;
-      }
-    </style>
-
-    <title>Portal Saúde</title>
-  </head>
-  <body>
-    <div class="principal">
-      <!-- <img src="/images/Background1.png" alt="dr" class="img-fluid"> -->
-      <header class="conteiner">
-        <div class="row">
-          <div class="col-4">
-            <img src="/images/logo.png" alt="Portal Saúde" class="offset-4" />
-          </div>
-          <div class="col-8">
-            <nav class="menu">
-              <ul class="d-flex mt-3 offset-2 nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#planoDeSaude"></a>Planos de Saúde
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link href="#quemSomos"></a>Quem Somos
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link href="#Contato"></a>Contato
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </header>
-      <!-- <div class="meio offset-3 align-items-end"> -->
-      <div class="conteiner-fluid">
-        <div class="row align-items-end p-5 offset-1">
-          <div class="row">
-            <h1 class="col-md-6 text-center pt-3">Conheça os melhores Planos de Saúde do mercado</h1>
-            <div class="w-100"></div>
-            <h5 class="col-md-6 text-center my-4 fw-light">Receba um atendimento totalmente personalizado</h5>
-          </div>
-          <form class="col-12 col-md-6 px-5 offset-1">
-            <div class="form-group mb-3 col-md-6">
-              <label for="Nome">Nome</label>
-              <input
-                type="text"
-                class="form-control"
-                id="inputName"
-                aria-describedby="emailHelp"
-                placeholder=""
-              />
-            </div>
-            <div class="form-group mb-3 col-md-6">
-              <label for="email">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="inputEmail"
-                aria-describedby="emailHelp"
-                placeholder=""
-              />
-            </div>
-            <div class="form-group mb-3 col-md-6">
-              <label for="telefone">Telefone</label>
-              <input
-                type="tel"
-                class="form-control"
-                id="inputTelefone"
-                placeholder=""
-              />
-            </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="inputPf" />
-              <label class="form-check-label" for="check1"
-                >Pessoa física</label
-              >
-            </div>
-            <div class="form-check mb-3">
-              <input type="checkbox" class="form-check-input" id="inputPj" />
-              <label class="form-check-label" for="check2"
-                >Pessoa jurídica</label
-              >
-            </div>
-            <button type="submit" class="btn btn-primary offset-2">
-              ENVIAR
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="inferior conteiner">
-      <div class="row justify-content-center">
-        <img src="/images/Logo_Seguros_Unimed.png" alt="unimed_seguros" class="col-2 img-fluid px-4 mx-2">
-        <img src="/images/logotipo.png" alt="santa_rita" class="col-2 img-fluid mx-2 py-2">
-        <img src="/images/logo-hospitala-transparente.png" alt="hospitalar" class="col-2 img-fluid mx-2 px-3">
-        <img src="/images/logo-amil-300x107_0.png" alt="amil" class="col-2 img-fluid mx-2">
-        <img src="/images/humana_saude.png" alt="humana_saude" class="col-2 img-fluid mx-2 py-2">
-        <img src="/images/grupo-notredame-intermedica-logo.png" alt="notredame" class="col-2 img-fluid mx-2">
-        <img src="/images/bradesco-logo-novo-2018.png" alt="bradesco" class="col-2 img-fluid mx-2 px-3">
-        <img src="/images/omint-logo.png" alt="omint" class="col-2 img-fluid mx-2">
-      </div>
-    </div>
-  </body>
-
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/popper.min.js"></script>
-</html>
->>>>>>> 09d742b69a821fe9754be6824e022eba1a4bd085
