Ajuste de cores e imagens dos planos de saude

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <div class="slide-content">
           <div class="container">
             <div class="row">
-              <div class="col-md-6 col-md-offset-1">
-                <div class="banner-center-box text-center text">
+              <div class="col-xs-8 col-md-offset-1">
+                <div class="banner-center-box text">
                   <h1>Conheça os melhores planos de saúde do mercado</h1>
                   <div class="description">
                     Tenha um atendimento personalizado a qualquer hora.
@@ -149,21 +149,11 @@
 		============================================= -->
     <section id="content">
       <div id="content-wrap">
-        <div id="contato" class="flat-section make-appointment" data-scroll-index="1">
+        <div id="contato" class="flat-section" data-scroll-index="1">
           <div class="section-content">
             <div class="container">
               <div class="row">
-                <div class="col-md-3 col-sm-6 text-center hidden-xs align-self-bottom">
-                  <img src="images/files/dr1.png" alt="dr1"/>
-                </div>
-                <div class="
-                      col-md-3 col-sm-6 col-md-push-6
-                      text-center
-                      hidden-xs
-                    ">
-                  <img src="images/files/health-care.png" alt="" />
-                </div>
-                <div class="col-md-6 col-sm-12 col-md-pull-3">
+                <div class="col-md-6 col-sm-12 col-md-offset-3">
                   <div class="box-appointment-form">
                     <h2>Deixe seu Contato</h2>
                     <p>
@@ -184,9 +174,13 @@
                         <input type="text" name="afPhoneNum" id="afPhoneNum" class="form-control"
                           placeholder="Celular" />
                       </div>
-                      <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="inputPf" />
-                        <label class="form-check-label" for="check1">Pessoa física</label>
+                      <div class="check-box-diego">
+                        <label class="form-check-label" for="check1">Pessoa Física</label>
+                        <input type="checkbox" class="" id="inputPf" />
+                      </div>
+                      <div class="check-box-diego">
+                        <label class="form-check-label" for="check2">Pessoa Jurídica</label>
+                        <input type="checkbox" class="" id="inputPj" />
                       </div>
                       <!-- .form-group end -->
                       <div class="form-group">
@@ -211,7 +205,7 @@
           <!-- .section-content end -->
         </div>
         <!-- .flat-section end -->
-
+        
         <!-- === Watch Video =========== -->
         <div id="sobre" class="parallax-section watch-video" data-scroll-index="2">
           <div class="section-inner">
@@ -273,42 +267,6 @@
             </div>
           </div>
           <!-- .parallax-section end -->
-          <div id="planosDeSaude" class="parallax-section our-services" data-scroll-index="3">
-            <div class="section-inner">
-              <div class="container">
-                <div class="row">
-                  <div class="section-content">
-                    <div id="teste1" class="section-title text-white mt-5 text-center">
-                      <h2>Planos de Saúde</h2>
-                      <p>
-                        Conheça aqui todas as opções em planos de saúde familiar e empresarial, e fala sua cotação
-                        gratuitamente.
-                      </p>
-                    </div>
-                    <div id="slideShow" class="img-planosSaude">
-                      <img src="/images/amil.png" alt="amil" style="width: 200px; height: 150px;">
-                      <img src="/images/sulAmerica.png" alt="sulAmerica">
-                      <img src="/images/bradesco.png" alt="bradesco">
-                      <img src="/images/unimed.png" alt="unimed">
-                      <img src="/images/hospitalar.png" alt="hospitalar">
-                    </div>
-                    <div id="slideShow" class="img-planosSaude1">
-                      <img src="/images/notredame.png" alt="notredame">
-                      <img src="/images/humanaSaude.png" alt="humanaSaude">
-                      <img src="/images/santaRitaSaude.png" alt="santaRitaSaude">
-                      <img src="/images/omint.png" alt="omint" style="height: 200px; width: 200px;">
-                    </div>
-                  </div>
-                  <!-- .section-content end -->
-                </div>
-                <!-- .row end -->
-              </div>
-              <!-- .container end -->
-            </div>
-            <!-- .section-inner end -->
-          </div>
-          <!-- .parallax-section end -->
-
           <!-- === Happy Clients =========== -->
           <div id="avaliacoes" class="flat-section happy-clients" data-scroll-index="4">
             <div class="section-content">
@@ -414,8 +372,44 @@
             <!-- .section-content end -->
           </div>
           <!-- .flat-section end -->
-
+  
           <!-- === Our Services =========== -->
+          <div id="planosDeSaude" class="parallax-section our-services" data-scroll-index="3">
+            <div class="section-inner">
+              <div class="container">
+                <div class="row">
+                  <div class="section-content">
+                    <div id="teste1" class="section-title2 text-white mt-5 text-center">
+                      <h2>Planos de Saúde</h2>
+                      <p>
+                        Conheça aqui todas as opções em planos de saúde familiar e empresarial, e faça sua cotação
+                        gratuitamente.
+                      </p>
+                    </div>
+                    <div id="slideShow" class="row img-planosSaude text-center">
+                      <img src="/images/amil.png" alt="amil" style="width: 200px; height: 150px;">
+                      <img src="/images/sulAmerica.png" alt="sulAmerica" style="width: 190px;">
+                      <img src="/images/bradesco.png" alt="bradesco">
+                      <img src="/images/unimed.png" alt="unimed">
+                      <img src="/images/hospitalar.png" alt="hospitalar">
+                    </div>
+                    <div id="slideShow" class="row img-planosSaude1 text-center">
+                      <img src="/images/notredame.png" alt="notredame">
+                      <img src="/images/humanaSaude.png" alt="humanaSaude" style="height: 200px; width: 300px">
+                      <img src="/images/santaRitaSaude.png" alt="santaRitaSaude">
+                      <img src="/images/omint.png" alt="omint" style="height: 200px; width: 200px;">
+                    </div>
+                  </div>
+                  <!-- .section-content end -->
+                </div>
+                <!-- .row end -->
+              </div>
+              <!-- .container end -->
+            </div>
+            <!-- .section-inner end -->
+          </div>
+          <!-- .parallax-section end -->
+
 
           <!-- Footer Mini
 		============================================= -->
@@ -424,8 +418,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="copyrights-message">
-                    2017 © <span class="colored">Medical Template.</span> All Rights
-                    Reserved
+                    2021 © <span class="colored">Portal Saude.</span> Todos os direitos reservados
                   </div>
                   <ul class="social-icons">
                     <li>
