ajustes nas cores

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Meta
 	============================================= -->
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, intial-scale=1, max-scale=1" />
+  <meta name="viewport" content="width=device-width" />
 
   <!-- Stylesheets
 	============================================= -->
@@ -67,7 +67,7 @@
                     <a data-scroll-nav="2" href="#sobre">SOBRE</a>
                   </li>
                   <li>
-                    <a data-scroll-nav="3" href="#planosDeSaude">PLANOS DE SAÚDE</a>
+                    <a data-scroll-nav="3" href="#planos">PLANOS DE SAÚDE</a>
                   </li>
                   <li>
                     <a data-scroll-nav="4" href="#avaliacoes">AVALIAÇÕES</a>
@@ -205,7 +205,7 @@
           <!-- .section-content end -->
         </div>
         <!-- .flat-section end -->
-        
+
         <!-- === Watch Video =========== -->
         <div id="sobre" class="parallax-section watch-video" data-scroll-index="2">
           <div class="section-inner">
@@ -372,9 +372,9 @@
             <!-- .section-content end -->
           </div>
           <!-- .flat-section end -->
-  
+
           <!-- === Our Services =========== -->
-          <div id="planosDeSaude" class="parallax-section our-services" data-scroll-index="3">
+          <div id="planos" class="parallax-section our-services" data-scroll-index="3">
             <div class="section-inner">
               <div class="container">
                 <div class="row">
@@ -454,7 +454,6 @@
         <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/jquery.stellar.js"></script>
         <script src="js/owl.carousel.min.js"></script>
-        <script src="js/jquery.mb.YTPlayer.min.js"></script>
         <script src="js/hoverIntent.js"></script>
         <script src="js/simple-scrollbar.min.js"></script>
         <script src="js/superfish.js"></script>
